--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Projeto desenvolvido com intuito de desenvolver uma rede de adoção de Pets em situação de rua</description>
 	<properties>
 		<java.version>17</java.version>
+		<mapper.version>3.1.1</mapper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,6 +40,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${mapper.version}</version>
 		</dependency>
 	</dependencies>
 
