build: add JSON dependency

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
