feat: add jwt app properties for dev and prod profiles

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,3 +16,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
+app:
+  jwt-secret: ${JWT_DEV_SECRET}
+  jwt-expiration-milliseconds: ${JWT_DEV_EXPIRATION}
