--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -16,3 +16,6 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
+app:
+  jwt-secret: ${JWT_PROD_SECRET}
+  jwt-expiration-milliseconds: ${JWT_PROD_EXPIRATION}
