--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@ DB_DEV_URL=
 DB_DEV_USER=
 DB_DEV_PASSWORD=
 
+JWT_DEV_SECRET=
+JWT_DEV_EXPIRATION=
+
 DB_PROD_URL=
 DB_PROD_USER=
 DB_PROD_PASSWORD=
+
+JWT_PROD_SECRET=
+JWT_PROD_EXPIRATION=
