feat: add new env example attributes

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ DB_PROD_PASSWORD=
 
 JWT_PROD_SECRET=
 JWT_PROD_EXPIRATION=
+
+# MAIL
+MAIL_DEV_HOST=
+MAIL_DEV_PORT=
+MAIL_DEV_USERNAME=
+MAIL_DEV_PASSWORD=
