feat: add caching properties

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,10 @@
 server:
   port: 8080
 spring:
-#  config:
-#    import: optional:file:.env[.properties]
+  #  config:
+  #    import: optional:file:.env[.properties]
+  cache:
+    cache-names: pets
   datasource:
     url: ${DB_DEV_URL}
     driver-class-name: org.postgresql.Driver
