--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# remember of moving this file outside the project ws
-
 version: '3.8'
 services:
   db:
@@ -21,8 +19,7 @@ services:
     restart: always
     build:
       context: .
-      dockerfile: .
-    working_dir: .
+      dockerfile: ./infrastructure/Dockerfile
     env_file:
       - .env
     environment:
