--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17-oracle
 VOLUME /tmp
-ADD /adotar-back/target/adotar-0.0.1-SNAPSHOT.jar app.jar
+ADD /infrastructure/build/target/app.jar app.jar
 EXPOSE 8080
 RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
