adjust package and modules

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,10 +10,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation project(path: ":core")
+    implementation project(path: ":usecase")
 }
 
 test {
-    useJUnitPlatform()
 }
