--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -13,6 +13,10 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ":core");
+    implementation project(path: ":usecase");
+    implementation project(path: ":application");
+
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
