--- a/infrastructure/.gitignore
+++ b/infrastructure/.gitignore
@@ -8,7 +8,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !infrastructure/main/**/target/
 !**/src/test/**/target/
-.env
+../infra/.env
 
 ### STS ###
 .apt_generated
