--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
     implementation 'org.flywaydb:flyway-core'
 
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     runtimeOnly 'com.h2database:h2'
