--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       TZ: America/Sao_Paulo
       POSTGRES_USER: "${DB_DEV_USER}"
       POSTGRES_PASSWORD: "${DB_DEV_PASSWORD}"
-      POSTGRES_DB: "${DB_DEV_PASSWORD}"
+      POSTGRES_DB: "${DB_DEV_NAME}"
     ports:
       - "5436:5432"
     env_file:
