--- a/infra/src/main/resources/application-dev.yml
+++ b/infra/src/main/resources/application-dev.yml
@@ -41,28 +41,23 @@ spring:
     fail-on-missing-locations: true
     baseline-version: 1
 
-  #  mail:
-  #    host: ${MAIL_DEV_HOST}
-  #    port: ${MAIL_DEV_PORT}
-  #    username: ${MAIL_DEV_USERNAME}
-  #    password: ${MAIL_DEV_PASSWORD}
-  #    properties:
-  #      mail:
-  #        smtp:
-  #          auth: true
-  #          socketFactory:
-  #            port: 465
-  #            class: javax.net.ssl.SSLSocketFactory
-  #        starttls:
-  #          enable: true
+  mail:
+    host: ${MAIL_DEV_HOST}
+    port: ${MAIL_DEV_PORT}
+    username: ${MAIL_DEV_USERNAME}
+    password: ${MAIL_DEV_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+        starttls:
+          enable: true
   web:
     locale-resolver: fixed
     locale: pt_BR
 app:
   jwt-secret: ${JWT_DEV_SECRET}
   jwt-expiration-milliseconds: ${JWT_DEV_EXPIRATION}
-#mail:
-#  host: ${MAIL_DEV_HOST}
-#  port: ${MAIL_DEV_PORT}
-#  username: ${MAIL_DEV_USERNAME}
-#  password: ${MAIL_DEV_PASSWORD}
