add unit tests for mail service send html email

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
+rootProject.name = 'adotar-back'
+
 include 'core'
 include 'usecase'
 include 'application'
 include 'infrastructure'
 include 'infra'
+include 'test'
 
