--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.security:spring-security-test'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'net.datafaker:datafaker:2.3.1'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
