--- a/infra/src/test/resources/application-test.yml
+++ b/infra/src/test/resources/application-test.yml
@@ -2,16 +2,43 @@ server:
   port: 8888
 spring:
   datasource:
-    url: jdbc:h2:~/test;MODE=PostgreSQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: ${DB_TEST_URL}
+    driver-class-name: org.postgresql.Driver
+    username: ${DB_TEST_USER}
+    password: ${DB_TEST_PASSWORD}
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      connection-timeout: 20000
+      minimum-idle: 10
+      maximum-pool-size: 50
+      idle-timeout: 10000
+      pool-name: PoolHikari
+      auto-commit: false
+    dbcp2:
+      pool-prepared-statements: true
+      max-open-prepared-statements: 100
+  transaction:
+    rollback-on-commit-failure: true
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
-      show_sql: false
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        '[show_sql]': true
+        '[format_sql]': true
+        jdbc:
+          batch_size: 4
+        order_updates: true
+        order_inserts: true
+  session:
+    jdbc:
+      cleanup-cron: 0 0 4 * * *
+  flyway:
+    baseline-on-migrate: true
+    fail-on-missing-locations: true
+    baseline-version: 1
+
   mail:
     host: ${MAIL_DEV_HOST}
     port: ${MAIL_DEV_PORT}
@@ -29,5 +56,6 @@ spring:
   web:
     locale-resolver: fixed
     locale: pt_BR
-  flyway:
-    enabled: false
+app:
+  jwt-secret: ${JWT_DEV_SECRET}
+  jwt-expiration-milliseconds: ${JWT_DEV_EXPIRATION}
