--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation group: 'io.rest-assured', name: 'rest-assured'
+    testImplementation 'org.testcontainers:postgresql:1.20.1'
 
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
